--- a/assets/css/underline.css
+++ b/assets/css/underline.css
@@ -29,7 +29,7 @@ https://stackoverflow.com/questions/45164065/thick-underline-when-hover-and-when
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: 6px;
+  bottom: 8px;
   left: 0;
   background-color: #fff;
   visibility: hidden;
